<resources>
    <string name="app_name">TCTTCak Ron</string>
    <string name="how_many">Berapa Banyak</string>

    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>...</item>
    </string-array>

    <string-array name="nama_makanan">

    </string-array>

    <string-array name="none">
        <item> </item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slide"><![CDATA[Tahu Campur & Tahu Telor]]></string>
    <string name="display_date_from">Mulai tanggal. . .</string>
    <string name="date_from">Mulai tanggal</string>
    <string name="display_date_to">Sampai tanggal. . .</string>
    <string name="date_to">Sampai tanggal</string>
    <string name="calculation_text">Tampilkan</string>
    <string name="clear_results">Reset</string>
</resources>
