<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryAdmin">

    <ScrollView
        android:id="@+id/scroll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#ffffff"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/first_layout_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/current_date"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/display_from_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#B2DFDB"
                    android:padding="12dp"
                    android:text="@string/display_date_from"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/current_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:padding="12dp"
                android:text="@string/date_from"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/second_layout_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/birthday_date"
                android:orientation="horizontal"

                android:padding="8dp">

                <TextView
                    android:id="@+id/display_to_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#B2DFDB"
                    android:padding="12dp"
                    android:text="@string/display_date_to"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/birthday_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_layout_wrapper"
                android:layout_marginTop="32dp"
                android:padding="12dp"
                android:text="@string/date_to"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:id="@+id/horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/second_layout_wrapper"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button One" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button Two" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button Three" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button Four" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button Five" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button Six" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button Seven" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button Eight" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button Nine" />
                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/button_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_calculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:gravity="center|center_horizontal"
                    android:padding="16dp"
                    android:text="@string/calculation_text"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/button_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1"
                    android:gravity="center|center_horizontal"
                    android:padding="16dp"
                    android:text="@string/clear_results"
                    android:textColor="#000000" />
            </LinearLayout>

            <TextView
                android:id="@+id/age_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_wrapper"
                android:layout_marginTop="32dp"
                android:background="#B2DFDB"
                android:padding="12dp"
                android:text="test"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/age_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/age_header">

                <TableRow android:padding="24dp">

                    <TextView
                        android:id="@+id/years_in_age"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal"
                        android:text="1"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/months_in_age"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal"
                        android:text="2"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/days_in_age"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal"
                        android:text="3"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/next_birthday_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/age_table"
                android:layout_marginTop="32dp"
                android:background="#B2DFDB"
                android:padding="12dp"
                android:text="test2"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/next_age_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/next_birthday_header">

                <TableRow android:padding="24dp">

                    <TextView
                        android:id="@+id/years_in_birthday"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal"
                        android:text="4"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/months_in_birthday"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal"
                        android:text="5"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/days_in_birthday"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal"
                        android:text="6"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>